// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-compute - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Azure VM and VMSS router for recommendations, pricing, autoscale, orchestration, and connectivity troubleshooting. WHEN: Azure VM, VMSS, scale set, recommend, compare, server, website, burstable, lightweight, VM family, workload, GPU, learning, simulation, dev/test, backend, autoscale, load balancer, Flexible orchestration, Uniform orchestration, cost estimate, connect, refused, Linux, black screen, reset password, reach VM, port 3389, NSG, troubleshoot.",
  "extractedKeywords": [
    "3389",
    "autoscale",
    "azure",
    "backend",
    "balancer",
    "black",
    "burstable",
    "compare",
    "compute",
    "connect",
    "connectivity",
    "cost",
    "estimate",
    "family",
    "flexible",
    "learning",
    "lightweight",
    "linux",
    "load",
    "orchestration",
    "password",
    "port",
    "pricing",
    "reach",
    "recommend",
    "recommendations",
    "refused",
    "reset",
    "router",
    "scale",
    "screen",
    "server",
    "simulation",
    "test",
    "troubleshoot",
    "troubleshooting",
    "uniform",
    "vmss",
    "website",
    "when",
    "workload",
  ],
  "name": "azure-compute",
}
`;

exports[`azure-compute - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "3389",
  "autoscale",
  "azure",
  "backend",
  "balancer",
  "black",
  "burstable",
  "compare",
  "compute",
  "connect",
  "connectivity",
  "cost",
  "estimate",
  "family",
  "flexible",
  "learning",
  "lightweight",
  "linux",
  "load",
  "orchestration",
  "password",
  "port",
  "pricing",
  "reach",
  "recommend",
  "recommendations",
  "refused",
  "reset",
  "router",
  "scale",
  "screen",
  "server",
  "simulation",
  "test",
  "troubleshoot",
  "troubleshooting",
  "uniform",
  "vmss",
  "website",
  "when",
  "workload",
]
`;
